fixed alignment

--- a/static/styles/homepage/index.scss
+++ b/static/styles/homepage/index.scss
@@ -163,10 +163,6 @@
 	fill: $primaryColor;
 }
 
-.text-center {
-	text-align: center;
-}
-
 .newsletter {
 	max-width: 28ch;
 	margin: 0 auto;
